--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  text-align: center;
+  max-width: 500px;
+}
 html {
   font-size: 20px;
   font-family: sans-serif;
@@ -7,6 +11,7 @@ li {
   line-height: 160%;
   padding: 20px 10px;
   cursor: pointer;
+  margin: 10px;
 }
 
 li:nth-child(even) {
@@ -18,7 +23,10 @@ li:nth-child(odd) {
 
 .enabled {
   font-weight: bold;
-} 
+}
 .disabled {
-color: gray;
+  color: gray;
+}
+#buy {
+  font-size: 20px;
 }
